--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,1 +1,17 @@
 @import '~bootstrap/scss/bootstrap';
+
+.input-form-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+
+  input {
+    position: relative;
+    flex: 1 1 auto;
+    width: 1%;
+    min-width: 0;
+    margin-bottom: 0;
+  }
+}
